<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context="com.darkweb.genesissearchengine.appManager.home_activity.homeController">

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="56dp"
            android:alpha="0"
            android:background="@color/button_gray"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="ca-app-pub-5074525529134731/7816565677"
            ads:layout_constraintEnd_toEndOf="parent"
            ads:layout_constraintHorizontal_bias="0.5"
            ads:layout_constraintStart_toStartOf="parent"
            app:elevation="10dp"
            ads:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
            android:id="@+id/webviewContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <org.mozilla.geckoview.GeckoView
                android:id="@+id/webLoader"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="0dp"
                android:alpha="1"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="8dp" />


    </FrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/requestFailure"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0"
            android:background="@color/white"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <ImageButton
                android:id="@+id/errorBack"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white_darker"
                android:contentDescription="@string/todo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <TextView
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="74dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/errorTiyle"
                android:textAlignment="viewStart"
                android:textColor="@color/text_color_v1"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TextViewEdits" />

        <Button
                android:id="@+id/reloadButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="36dp"
                android:background="@xml/reload_default_state"
                android:bottomLeftRadius="10dp"
                android:bottomRightRadius="10dp"
                android:radius="1dp"
                android:onClick="onReload"
                android:text="@string/reload"
                android:textColor="@color/black"
                android:topLeftRadius="10dp"
                android:topRightRadius="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent" />

        <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="120dp"
                android:layout_marginEnd="10dp"
                android:text="@string/internetErrorMessage"
                android:textColor="@color/text_color_v1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <ImageView
                android:layout_width="150dp"
                android:layout_height="0dp"
                android:layout_marginTop="35dp"
                android:layout_marginBottom="35dp"
                android:contentDescription="@string/todo"
                app:layout_constraintBottom_toTopOf="@+id/reloadButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:srcCompat="@drawable/icon_interneticon" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="71dp"
            android:background="#00000000"
            app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
                android:id="@+id/topbar"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:elevation="7dp"
                android:background="@xml/floating_button_border"
                android:gravity="left"
                android:paddingBottom="1dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="RtlHardcoded,UselessParent">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:elevation="7dp"
                    android:gravity="left"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="RtlHardcoded,UselessParent">

                <ImageButton
                        android:id="@+id/home"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="14dp"
                        android:layout_marginBottom="0dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:contentDescription="@string/todo"
                        android:scaleType="fitCenter"
                        android:onClick="onHomeButton"
                        android:src="@drawable/icon_homeicon"
                        android:tint="@color/black" />

                <AutoCompleteTextView
                        android:id="@+id/search"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="0dp"
                        android:layout_marginBottom="8dp"
                        android:layout_weight="1"
                        android:background="@xml/search_back_default"
                        android:completionHintView="@layout/hint_view"
                        android:dropDownHeight="220dp"
                        android:dropDownSelector="@xml/rouned_corner"
                        android:ems="10"
                        android:hint="@string/SearchHintMain"
                        android:importantForAutofill="no"
                        android:inputType="textNoSuggestions"
                        android:maxLines="1"
                        android:paddingLeft="12dp"
                        android:paddingRight="15dp"
                        android:selectAllOnFocus="true"
                        android:text="@string/homeUrl"
                        android:textColor="@color/text_color_v2"
                        android:textColorHighlight="@color/text_color_highlight_v1"
                        android:textCursorDrawable="@xml/search_cursor_state"
                        android:textSize="16sp"
                        tools:targetApi="o" />

                <ImageButton
                        android:id="@+id/switchEngine"
                        android:layout_width="33dp"
                        android:layout_height="33dp"
                        android:layout_marginStart="9dp"
                        android:layout_marginTop="13dp"
                        android:layout_marginEnd="6.5dp"
                        android:layout_marginBottom="0dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:contentDescription="@string/todo"
                        android:onClick="onSwitchSearch"
                        android:scaleType="fitCenter"
                        android:src="@drawable/google_logo" />

                <ImageButton
                        android:id="@+id/menu"
                        android:layout_width="32dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        android:layout_marginEnd="0dp"
                        android:background="@xml/menu_button_style"
                        android:contentDescription="@string/todo"
                        android:paddingLeft="8dp"
                        android:paddingTop="19dp"
                        android:onClick="onOpenMenuItem"
                        android:paddingRight="8dp"
                        android:paddingBottom="19dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/menu_item" />

            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <ProgressBar
                android:id="@+id/progressBar"
                style="@android:style/Widget.Holo.Light.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="3.5dp"
                android:alpha="0"
                android:layout_marginTop="55.7dp"
                android:progress="50"
                android:progressDrawable="@xml/gradient_progress"
                android:scaleY="0.7"
                app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/splashScreen"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:background="@color/ease_blue"
                android:focusable="true">

            <ImageView
                    android:id="@+id/backsplash"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@xml/splash_gradient"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                    android:id="@+id/loadingText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="50dp"
                    android:layout_marginBottom="37dp"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="Loading Please Wait"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textFontWeight="5"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                    android:id="@+id/imageView_loading_back"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginBottom="25dp"
                    app:layout_constraintBottom_toTopOf="@+id/loadingText"
                    app:layout_constraintEnd_toStartOf="@+id/backsplash"
                    app:layout_constraintStart_toEndOf="@+id/backsplash"
                    app:srcCompat="@drawable/icon_loading" />

            <ImageButton
                    android:id="@+id/gateway_splash"
                    android:layout_width="38dp"
                    android:layout_height="38dp"
                    android:layout_marginTop="14dp"
                    android:layout_marginEnd="14dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/todo"
                    android:onClick="onProxyEnabled"
                    android:scaleType="fitCenter"
                    android:src="@xml/gateway_splash"
                    android:padding="5dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>



    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:src="@drawable/icon_ban"
            android:layout_height="wrap_content"
            android:alpha="0"
            app:borderWidth="0dp"
            app:elevation="10dp"
            android:backgroundTint="@color/white"
            android:clickable="true" app:srcCompat="?attr/actionModeSelectAllDrawable"
            android:id="@+id/floatingActionButton3" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="24dp"
            android:layout_marginEnd="24dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>